Renamed default namespace

--- a/src/FluentFiles.Core/FluentFiles.Core.csproj
+++ b/src/FluentFiles.Core/FluentFiles.Core.csproj
@@ -7,6 +7,8 @@
 	<PropertyGroup>
 		<WarningLevel>4</WarningLevel>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+		<AssemblyName>Herknids.FluentFiles.Core</AssemblyName>
+		<RootNamespace>Herkinds.FluentFiles.Core</RootNamespace>
 	</PropertyGroup>
 
 </Project>
