--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,18 @@
-name: .NET Core
+name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+    - master
   pull_request:
-    branches: [ master ]
+    branches:
+    - master
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: |
+      ubuntu-latest
+      windows-latest
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
