--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,8 @@ on:
 
 jobs:
   build:
-    runs-on: |
+    runs-on:
       ubuntu-latest
-      windows-latest
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
